--- a/css/fonts.css
+++ b/css/fonts.css
@@ -927,6 +927,42 @@ line-height: 18px; /* 128.571% */
 text-decoration-line: underline;
 }
 
+.dashboard-font-5 {
+  color: #222;
+font-family: "DM Sans";
+font-size: 28px;
+font-style: normal;
+font-weight: 500;
+line-height: 36px; /* 128.571% */
+}
+
+.dashboard-font-6 {
+  color: #000;
+font-feature-settings: 'ss03' on;
+font-family: "DM Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 36px; /* 200% */
+}
+
+.dashboard-font-7 {
+  color: var(--BLACK, #444);
+font-family: "DM Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 25.2px; /* 180% */
+}
+
+.dashboard-font-8 {
+  color: var(--BLACK, #444);
+font-family: "DM Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: 25.2px; /* 140% */
+}
 
 /* buttons stylings*/
 
