--- a/css/fonts.css
+++ b/css/fonts.css
@@ -964,6 +964,46 @@ font-weight: 700;
 line-height: 25.2px; /* 140% */
 }
 
+.dashboard-font-9 {
+  color: var(--Grayscale-Gray-80, #4B4B4D);
+leading-trim: both;
+text-edge: cap;
+font-family: "DM Sans";
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: -0.32px;
+}
+
+.dashboard-font-10 {
+  color: var(--Grayscale-Gray-80, #4B4B4D);
+font-family: "DM Sans";
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 21px; /* 175% */
+letter-spacing: -0.32px;
+}
+
+.dashboard-font-11 {
+  color: var(--BLACK, #444);
+font-family: "DM Sans";
+font-size: 18px;
+font-style: normal;
+font-weight: 500;
+line-height: 25px; /* 138.889% */
+}
+.dashboard-font-12 {
+  color: var(--GREY, #747474);
+font-family: "DM Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 185.714% */
+letter-spacing: -0.078px;
+}
+
 /* buttons stylings*/
 
 .reserve-button,
@@ -1022,4 +1062,22 @@ font-weight: 500;
   align-items: center;
   justify-content: center;
   border: 1px solid #4444;
+}
+
+
+.button-edit-delet {
+  display: flex;
+padding: 12px;
+align-items: center;
+gap: 24px;
+border-radius: 12px;
+border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+background: var(--White-White-100, #FFF);
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-family: "DM Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 18px; /* 128.571% */
+letter-spacing: -0.078px;
 }
