--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -259,12 +259,13 @@
   align-items: center;
   justify-content: center;
   color: var(--BLACK, #444);
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: "DM Sans";
-font-size: 12px;
-font-style: normal;
-font-weight: 500;
-line-height: 20px; /* 166.667% */
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  /* 166.667% */
 }
 
 .dropdown-time {
@@ -276,13 +277,94 @@ line-height: 20px; /* 166.667% */
 
 .dropdown-time select {
   outline: none;
-  border:  none;
+  border: none;
   margin: 0;
   color: var(--Grayscale-Gray-80, #4B4B4D);
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 22px;
+  /* 157.143% */
+  letter-spacing: -0.12px;
+}
+
+.button-flex {
+  color: var(--BLACK, #444);
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: -0.28px;
+  display: flex;
+  padding: 12px 20px;
+  align-items: center;
+  gap: 32px;
+  border-radius: 16px;
+  border: 1px solid var(--LIGHT-GRAY, #F1F1F1);
+}
+
+.button-flex img {
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+}
+
+.three-dots-icon {
+  display: flex;
+  width: 45px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  align-self: stretch;
+  border-radius: 400px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: var(--Gray-04, #FCFCFC);
+}
+
+.calander-grid-d {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+
+  /* font*/
+  color: var(--BLACK, #444);
+font-feature-settings: 'clig' off, 'liga' off;
 font-family: "DM Sans";
-font-size: 14px;
+font-size: 12px;
 font-style: normal;
-font-weight: 500;
-line-height: 22px; /* 157.143% */
-letter-spacing: -0.12px;
+font-weight: 400;
+line-height: 14px; /* 116.667% */
+}
+
+.calander-grid-d .days {
+  height: 30px;
+
+}
+.calander-grid-d .date {
+  display: flex;
+height: 160px;
+padding: 12px;
+flex-direction: column;
+justify-content: space-between;
+align-items: flex-start;
+flex: 1 0 0;
+border-top: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+border-right: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+border-bottom: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+border-left: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+background: var(--Gray-04, #FCFCFC);
+}
+.calander-grid-d .date div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.calander-grid-d .date.active-1 {
+ background-image: url(../img/bg-line.png);
+}
+.calander-grid-d .date.active-2 {
+ background-image: url(../img/bg-line-dot.png);
 }
