--- a/css/s-custom2.css
+++ b/css/s-custom2.css
@@ -270,3 +270,90 @@ img {
     margin-top: 2rem;
   }
 }
+
+
+
+/*index item slider*/
+
+.slider {
+  position: relative;
+  max-width: 100%;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slides {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.slide {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+.slide img {
+  width: 100%;
+  display: block;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  color: black;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  user-select: none;
+  opacity: 0;
+  transition: all .3s ease-in-out;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex ;
+  align-items: center;
+  justify-content: center;
+}
+.slider:hover button {
+  opacity: 1;
+}
+.prev img {
+  margin-left: 5px;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.dots {
+  padding: 10px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.dot {
+  width: 4.5px;
+  height: 4.5px;
+  background-color: #FFF;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.dot.active {
+  width: 6px;
+  height: 6px;
+  background-color: #FFF;
+  border-radius: 50%;
+}
