--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a.btn-brand:hover {
   padding: 1rem 0 7rem 0;
 }
 .hero-section-1 {
-  background: url(../img/hero-bg.jpg);
+  background:linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url(../img/hero-bg.jpg) ;
   overflow: hidden;
   padding: 1rem 0 7rem 0;
   background-size: cover;
