--- a/css/calander.css
+++ b/css/calander.css
@@ -97,6 +97,7 @@ line-height: 22.4px; /* 140% */
 
 .content {
   display: none ;
+
 min-height: 400px;
 }
 
@@ -283,13 +284,13 @@ letter-spacing: -0.078px;
 }
 
 .slider-scale p {
-  width: 1px;
+  width: .5px;
   height: 8px;
   background: #E7E7E7;
 }
 
 .scale-mark {
-  width: 1px;
+  width: .5px;
   height: 16px;
   background: #E7E7E7;
 }
