--- a/css/calander.css
+++ b/css/calander.css
@@ -204,7 +204,7 @@ letter-spacing: -0.078px;
   border-radius: 10px;
 }
 
-.slider {
+.input-slider-range {
   width: 100%;
   -webkit-appearance: none;
   appearance: none;
@@ -216,7 +216,7 @@ letter-spacing: -0.078px;
   border-radius: 5px;
 }
 
-.slider::-webkit-slider-thumb {
+.input-slider-range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 25px;
@@ -227,7 +227,7 @@ letter-spacing: -0.078px;
   filter: drop-shadow(0px 3.25px 6.5px rgba(16, 24, 40, 0.06)) drop-shadow(0px 6.5px 13px rgba(16, 24, 40, 0.10));
 }
 
-.slider::-moz-range-thumb {
+.input-slider-range::-moz-range-thumb {
   width: 39px;
   height: 39px;
   border-radius: 50%;
@@ -237,7 +237,7 @@ letter-spacing: -0.078px;
   filter: drop-shadow(0px 3.25px 6.5px rgba(16, 24, 40, 0.06)) drop-shadow(0px 6.5px 13px rgba(16, 24, 40, 0.10));
 }
 
-.slider:hover {
+.input-slider-range:hover {
   opacity: 1;
 }
 
