--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -368,3 +368,82 @@ background: var(--Gray-04, #FCFCFC);
 .calander-grid-d .date.active-2 {
  background-image: url(../img/bg-line-dot.png);
 }
+
+
+/* listingDashboard.html tabel*/
+
+.tabel-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+.tabel {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+.tabel-1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.tabel-2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.tabel-1 img {
+display: flex;
+width: 72px;
+height: 48px;
+align-items: center;
+gap: 10px;
+flex-shrink: 0;
+border-radius: 8px;
+background: lightgray 50% / cover no-repeat, #FFF;
+}
+
+.availabel-button-tabel,
+.Unavailable-button-tabel {
+
+align-self: stretch;
+background: #FFF;
+border: 1px solid #747474;
+width: 90px;
+height: 48px;
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-family: "DM Sans";
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: -0.24px;
+background: #FAFAFA;
+border: 1.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+/* Elevation */
+box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+}
+
+.availabel-button-tabel{
+border-radius: 1.5rem 0 0 1.5rem;
+border-right: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+}
+.Unavailable-button-tabel{
+border-radius: 0 1.5rem 1.5rem 0;
+border-left: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+}
+
+.availabel-button-tabel.active-button-blue{
+
+ color:  #0D99FF;
+}
+.Unavailable-button-tabel.active-button-red{
+
+  color:  #BF3D35 ;
+}
