--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1189,6 +1189,15 @@ font-style: normal;
 font-weight: 500;
 line-height: 36px; /* 128.571% */
 }
+.dashboard-font-21 {
+  color: #444;
+font-family: "DM Sans";
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 138%; /* 19.32px */
+letter-spacing: -0.28px;
+}
 
 
 .input-fonts,
@@ -1231,6 +1240,8 @@ line-height: 36px; /* 128.571% */
   line-height: 36px;
   /* 300% */
 }
+
+
 
 .Request-again-button {
   display: flex;
