--- a/css/s-custom2.css
+++ b/css/s-custom2.css
@@ -27,7 +27,10 @@
   .search-box-m {
     position: relative !important;
   }
+  .home-header {
+    justify-content: center !important;
 
+  }
 
 }
 
@@ -193,6 +196,8 @@
 
 
 @media (max-width:700px) {
+
+
   .mobile-version-footer {
     display: none !important;
   }
