--- a/css/slick-slider.css
+++ b/css/slick-slider.css
@@ -190,3 +190,9 @@
     width: 1.6rem;
     height: 1.6rem;
 }
+
+@media (max-width:700px) {
+    .discover-box .item{
+        aspect-ratio: 16/13 !important;
+  }
+}
