--- a/css/s-custom2.css
+++ b/css/s-custom2.css
@@ -27,6 +27,7 @@
   .search-box-m {
     position: relative !important;
   }
+
   .home-header {
     justify-content: center !important;
 
@@ -63,7 +64,8 @@
   object-fit: cover;
   /* Maintain aspect ratio while covering the container */
 }
- img {
+
+img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -83,6 +85,36 @@
   padding: 3px;
   background-color: white;
   border-radius: 50%;
+}
+
+.details-mobile-icons div {
+  display: flex;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 24px;
+  border: 0.5px solid var(--White-White-24, rgba(255, 255, 255, 0.24));
+  background: var(--Grayscale-Gray-16, #F6F6F6);
+  backdrop-filter: blur(12px);
+}
+
+.details-mobile-icons div img {
+  width:  fit-content;
+  aspect-ratio: 1;
+}
+
+.mobile-version-details-heading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 0;
+}
+
+.time-circle {
+   width: 21.75px !important;
+   aspect-ratio: 1;
 }
 
 .listing-mobile {
@@ -118,11 +150,7 @@
   text-decoration: underline;
 }
 
-.Features li {
-  color: #4b4b4d;
-}
-
-.Features button {
+.features-group button {
   background: #F7F7F7;
   border-radius: 16px;
   padding: 16px 24px;
@@ -242,7 +270,7 @@
   }
 
   /* Position the slides */
-  .carousel-slide-img{
+  .carousel-slide-img {
     display: none;
   }
 
@@ -282,15 +310,18 @@
   }
 }
 
-#location-dropdown, #calander, #guests-dropdown {
+#location-dropdown,
+#calander,
+#guests-dropdown {
   display: none;
 }
+
 .home-calander {
-    position: absolute;
-    background-color: #FFF !important;
-    bottom: 0;
-    top: 105%;
-    transform: translateX(-50%, 50%);
+  position: absolute;
+  background-color: #FFF !important;
+  bottom: 0;
+  top: 105%;
+  transform: translateX(-50%, 50%);
 }
 
 .slick-dots {
@@ -298,31 +329,32 @@
 }
 
 @media (max-width: 768px) {
-.hero-search {
+  .hero-search {
     margin-top: 0px !important;
-}
+  }
 }
 
 @media (max-width: 768px) {
   .hero-search {
-      margin-top: 0 !important;
-      max-width: 80%;
+    margin-top: 0 !important;
+    max-width: 80%;
   }
-  }
+}
 
-  .book-gallery .bb {
-    color: #747474 !important;
-    text-decoration: line-through;
-  }
-  .book-gallery .b {
-    color: #333 !important;
-  }
+.book-gallery .bb {
+  color: #747474 !important;
+  text-decoration: line-through;
+}
+
+.book-gallery .b {
+  color: #333 !important;
+}
 
 
 
 /*index item slider*/
 
-.carousel-container{
+.carousel-container {
   position: relative;
   width: 100%;
   margin: auto;
@@ -360,13 +392,15 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  display: flex ;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .book-gallery:hover button {
   opacity: 1;
 }
+
 .prev img {
   margin-left: 5px;
 }
@@ -404,4 +438,3 @@
   background-color: #FFF;
   border-radius: 50%;
 }
-
