--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,11 @@ html {
   overflow-x: hidden;
   font-size: 18px;
 }
+
 a {
   text-decoration: none !important;
 }
+
 .btn-rounded {
   border-radius: 50px;
 }
@@ -129,11 +131,13 @@ a.btn-brand:hover {
   background: url(../img/hero-bg.png);
   padding: 1rem 0 7rem 0;
 }
+
 .hero-section-1 {
-  background:linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url(../img/hero-bg.jpg) ;
+  background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url(../img/hero-bg.jpg);
   padding: 1rem 0 7rem 0;
   background-size: cover;
 }
+
 .hero-search {
   text-align: center;
   max-width: 888px;
@@ -155,7 +159,7 @@ a.btn-brand:hover {
   width: fit-content;
   min-width: 300px;
   --bs-dropdown-link-active-bg: none;
-  --bs-dropdown-link-hover-bg:none;
+  --bs-dropdown-link-hover-bg: none;
   cursor: pointer;
 }
 
@@ -531,25 +535,36 @@ ul.cd-highlights b {
   height: 350px;
 }
 
+
 .cd-dhigh {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   gap: 1rem;
   font-size: 14px;
   margin: 15px 0;
 }
 
+
 .cd-dhigh li {
   border: solid 1px #E7E7E7;
   border-radius: 50px;
   padding: 5px 15px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
-.cd-dhigh li i {
-  padding-right: 5px;
+.features-group  ul {
+  color: #4b4b4d;
 }
+.cd-dhigh li img {
+     width: fit-content;
+      height: 21.75px;
+  }
+
 
 .TopHeaderText {
   color: #222;
@@ -1315,12 +1330,14 @@ ul.cd-highlights b {
   .marginSide {
     margin-left: 20px;
     margin-right: 20px;
-    
+
   }
+
   .sk-button {
     display: none !important;
   }
 }
+
 @media (max-width: 700px) {
 
   .sk-button {
@@ -1391,29 +1408,77 @@ ul.cd-highlights b {
 
 /* doted lines*/
 
-.doted-line-main li
-{
-    position: relative;
+.doted-line-main li {
+  position: relative;
 }
+
 .doted-line-main li::before {
-    content: " ";
-    background-color: #747474;
-    width: 1px;
-    height: 5px;
-    position: absolute;
-    bottom: -5px;
-    left: 8px;
+  content: " ";
+  background-color: #747474;
+  width: 1px;
+  height: 5px;
+  position: absolute;
+  bottom: -5px;
+  left: 8px;
 }
+
 .doted-line-main li::after {
-    content: " ";
-    background-color: #747474;
-    width: 1px;
-    height: 5px;
-    position: absolute;
-    top:  -5px;
-    left: 8px;
+  content: " ";
+  background-color: #747474;
+  width: 1px;
+  height: 5px;
+  position: absolute;
+  top: -5px;
+  left: 8px;
 }
-.doted-line-main  .first-after::after ,
-.doted-line-main  .last-before::before {
-    display: none;
+
+.doted-line-main .first-after::after,
+.doted-line-main .last-before::before {
+  display: none;
+}
+
+
+
+/* mobile footer css */
+
+main {
+  height: 2000px;
+  /* Just for demonstration */
+  padding: 20px;
+}
+
+.mobile-version-footer {
+  background-color: #f0f0f0;
+  display: none;
+  align-items: center;
+  justify-content: space-evenly;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  transition: transform 0.5s ease-out;
+  z-index: 1000;
+  background-color: white;
+  border-top: 1px solid #4444;
+  height: 60px;
+
+}
+
+.mobile-text-footer {
+  font-size: 12px;
+  margin-top: 0.25rem;
+}
+
+.mobile-version-footer .mf-icon {
+   display: flex;
+   flex-direction: column;
+   gap: 4px;
+   justify-content: center;
+   align-items: center;
+}
+
+
+
+.mobile-version-footer div img {
+  width: 21.75px;
+  height: 21.75;
 }
