--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: "DM Sans";
+}
 body,
 html {
   overflow-x: hidden;
@@ -1416,4 +1419,34 @@ ul.cd-highlights b {
 .doted-line-main  .first-after::after ,
 .doted-line-main  .last-before::before {
     display: none;
+}
+#preloader {
+    position: fixed;
+    inset: 0;
+    z-index: 999999;
+    overflow: hidden;
+    background: #ffffff;
+    transition: all 0.6s ease-out;
+}
+    #preloader:before {
+        content: "";
+        position: fixed;
+        top: calc(50% - 30px);
+        left: calc(50% - 30px);
+        border: 6px solid #ffffff;
+        border-color: #0D99FF transparent #0D99FF transparent;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: animate-preloader 1.5s linear infinite;
+    }
+
+@keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
