--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,6 +10,14 @@
   padding: 0.5rem;
 }
 
+textarea {
+  border: none;
+  outline: none;
+  width: 100%;
+  resize: none;
+  overflow-y: scroll;
+}
+
 .photos-right img {
   max-width: 110px;
   gap: 10px;
@@ -21,13 +29,14 @@
 
 .input-name {
   display: flex;
-  padding: 24px;
+  padding: 0 .5rem;
   align-items: center;
+  justify-content: space-between;
   gap: 10px;
   align-self: stretch;
   border-radius: 16px;
   border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.8));
-  background: #fcfcfc;
+  margin-bottom: 1rem;
 }
 
 .input-name input,
@@ -43,6 +52,119 @@
   /* 185.714% */
   letter-spacing: -0.078px;
 }
+
+.ui, input[type="text"], select {
+ width: 100%;
+  max-width: 200px !important;
+  padding: 12px !important;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 1rem;
+  box-sizing: border-box;
+  font-size: 12px;
+}
+.l-d-d .ui {
+  max-width: 100% !important;
+}
+
+.dropdown {
+  border-radius: 1rem;
+}
+.nput-ft {
+  display: flex;
+  align-items: center;
+  border: 1px solid #444;
+  border-radius: 1rem;
+  gap: 5px;
+  padding: 0 1rem;
+border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+background: #FDFDFD;
+}
+
+.nput-ft input{
+  width: 40px !important;
+  outline: none;
+  border: none;
+}
+
+.input-11 {
+display: flex;
+align-items: center;
+position: relative;
+color: var(--Grayscale-Gray-60, #ACACB0);
+font-size: 14px;
+font-weight: 700;
+line-height: 26px; /* 185.714% */
+letter-spacing: -0.078px;
+}
+.input-11 input {
+  max-width: 100% !important;
+  padding-left: 30px !important;
+  height: 48px;
+}
+
+.input-11 input::placeholder {
+color: var(--Grayscale-Gray-80, #4B4B4D);
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 26px; /* 185.714% */
+letter-spacing: -0.078px;
+}
+
+.damage-placeholder-text::placeholder {
+  color: var(--Grayscale-Gray-60, #ACACB0) !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 26px; /* 185.714% */
+  letter-spacing: -0.078px;
+}
+
+.taxes-place-hold-text::placeholder {
+  color: var(--Grayscale-Gray-60, #ACACB0);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 26px; /* 185.714% */
+  letter-spacing: -0.078px;
+}
+.select-time {
+  max-width: 100% !important;
+  border-radius: 16px;
+  margin-bottom: 0 !important;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80)) !important;
+}
+
+.dropdown-time-1 .select-time {
+  border: none !important;
+}
+.dropdown-time-2 {
+  height: auto !important;
+}
+.dropdown-time-2 .select-time {
+  padding: 1rem !important;
+}
+
+.divider-line {
+  width: 2px !important;
+  background-color: var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+}
+
+.input-11 a {
+  position: absolute;
+  right: 10px;
+color: var(--Primary-Primary-50, #0D99FF);
+font-size: 14px;
+font-weight: 500;
+line-height: 18px; /* 128.571% */
+letter-spacing: -0.078px;
+text-decoration-line: underline;
+}
+
+.input-11 p {
+ position: absolute;
+ left: 10px;
+}
+
 
 .edit-name {
   color: var(--Primary-Primary-50, #0d99ff);
@@ -60,7 +182,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1.6rem;
+  margin: 1.6rem 0;
 }
 
 .flex-c-1 {
@@ -82,7 +204,6 @@
 .grid-d {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 2rem;
 }
 
 .grid-d .choose-furniture {
@@ -90,7 +211,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5rem;
+  padding: 1rem;
 }
 
 .grid-d .choose-furniture:last-child,
@@ -101,7 +222,7 @@
 .pricing-daily .input-name,
 .pricing-weekly .input-name,
 .pricing-Monthly .input-name {
-  max-width: 200px;
+   width: fit-content;
 }
 
 @media (max-width:700px) {
@@ -317,32 +438,35 @@
 
   /* font*/
   color: var(--BLACK, #444);
-font-feature-settings: 'clig' off, 'liga' off;
-font-family: "DM Sans";
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 14px; /* 116.667% */
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  /* 116.667% */
 }
 
 .calander-grid-d .days {
   height: 30px;
 
 }
+
 .calander-grid-d .date {
   display: flex;
-height: 160px;
-padding: 12px;
-flex-direction: column;
-justify-content: space-between;
-align-items: flex-start;
-flex: 1 0 0;
-border-top: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-border-right: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-border-bottom: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-border-left: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-background: var(--Gray-04, #FCFCFC);
+  height: 160px;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex: 1 0 0;
+  border-top: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-right: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-bottom: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-left: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: var(--Gray-04, #FCFCFC);
 }
+
 .calander-grid-d .date div {
   display: flex;
   justify-content: space-between;
@@ -350,10 +474,11 @@ background: var(--Gray-04, #FCFCFC);
 }
 
 .calander-grid-d .date.active-1 {
- background-image: url(../img/bg-line.png);
+  background-image: url(../img/bg-line.png);
 }
+
 .calander-grid-d .date.active-2 {
- background-image: url(../img/bg-line-dot.png);
+  background-image: url(../img/bg-line-dot.png);
 }
 
 
@@ -365,6 +490,7 @@ background: var(--Gray-04, #FCFCFC);
   align-items: center;
   gap: 2rem;
 }
+
 .tabel {
   display: flex;
   justify-content: space-between;
@@ -378,6 +504,7 @@ background: var(--Gray-04, #FCFCFC);
   align-items: center;
   width: 100%;
 }
+
 .tabel-2 {
   display: flex;
   justify-content: space-between;
@@ -386,78 +513,81 @@ background: var(--Gray-04, #FCFCFC);
 }
 
 .tabel-1 img {
-display: flex;
-width: 72px;
-height: 48px;
-align-items: center;
-gap: 10px;
-flex-shrink: 0;
-border-radius: 8px;
-background: lightgray 50% / cover no-repeat, #FFF;
+  display: flex;
+  width: 72px;
+  height: 48px;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background: lightgray 50% / cover no-repeat, #FFF;
 }
 
 .availabel-button-tabel,
 .Unavailable-button-tabel {
 
-align-self: stretch;
-background: #FFF;
-border: 1px solid #747474;
-width: 90px;
-height: 48px;
-color: var(--Grayscale-Gray-80, #4B4B4D);
-font-family: "DM Sans";
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: -0.24px;
-background: #FAFAFA;
-border: 1.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-/* Elevation */
-box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+  align-self: stretch;
+  background: #FFF;
+  border: 1px solid #747474;
+  width: 90px;
+  height: 48px;
+  color: var(--Grayscale-Gray-80, #4B4B4D);
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.24px;
+  background: #FAFAFA;
+  border: 1.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  /* Elevation */
+  box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
 }
 
-.availabel-button-tabel{
-border-radius: 1.5rem 0 0 1.5rem;
-border-right: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
-}
-.Unavailable-button-tabel{
-border-radius: 0 1.5rem 1.5rem 0;
-border-left: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+.availabel-button-tabel {
+  border-radius: 1.5rem 0 0 1.5rem;
+  border-right: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
 }
 
-.availabel-button-tabel.active-button-blue{
-
- color:  #0D99FF;
+.Unavailable-button-tabel {
+  border-radius: 0 1.5rem 1.5rem 0;
+  border-left: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
 }
-.Unavailable-button-tabel.active-button-red{
 
-  color:  #BF3D35 ;
+.availabel-button-tabel.active-button-blue {
+
+  color: #0D99FF;
+}
+
+.Unavailable-button-tabel.active-button-red {
+
+  color: #BF3D35;
 }
 
 /* cover photo */
 
 .cover-photo {
-display: flex;
-width: 280px;
-height: 200px;
-flex-direction: column;
-align-items: flex-end;
-gap: 10px;
-border-radius: 12px;
-background: lightgray 50% / cover no-repeat, #EFEFEF;
-position: relative;
+  display: flex;
+  width: 280px;
+  height: 200px;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+  border-radius: 12px;
+  background: lightgray 50% / cover no-repeat, #EFEFEF;
+  position: relative;
 }
+
 .cover-image {
   display: flex;
-width: 280px;
-height: 200px;
-flex-direction: column;
-align-items: flex-end;
-gap: 10px;
-border-radius: 12px;
-background: lightgray 50% / cover no-repeat, #EFEFEF;
-overflow: hidden !important;
+  width: 280px;
+  height: 200px;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+  border-radius: 12px;
+  background: lightgray 50% / cover no-repeat, #EFEFEF;
+  overflow: hidden !important;
 }
 
 .cover-photo img {
@@ -466,47 +596,46 @@ overflow: hidden !important;
 }
 
 .edit-remove-cover-photo {
- position: absolute;
- top: 5%;
- right: 5%;
- border-radius: 50%;
- display: flex;
- align-items: center;
- justify-content: center;
- width: 30px;
- height: 30px;
- background-color: #fff;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
 }
 
 .show-edit-remove {
-   display: flex !important;
+  display: flex !important;
 }
 
 .edit-remove {
   display: none;
-width: 227px;
-padding: 16px;
-flex-direction: column;
-align-items: flex-start;
-gap: 8px;
-position: absolute;
-right: -70%;
-top: 30%;
-background-color: #fff;
-border-radius: 16px;
-border: 1px solid #E7E7E7;
-background: #FFF;
-/* Elevation */
-box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
+  width: 227px;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  position: absolute;
+  right: -70%;
+  top: 30%;
+  background-color: #fff;
+  border-radius: 16px;
+  border: 1px solid #E7E7E7;
+  background: #FFF;
+  /* Elevation */
+  box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
 }
 
 .plus-button {
   display: flex;
   padding: .5rem 1rem;
-align-items: center;
-gap: 5px;
-border-radius: 16px;
-border: 1px solid #E7E7E7;
-background: var(--Gray-04, #FCFCFC);
+  align-items: center;
+  gap: 5px;
+  border-radius: 16px;
+  border: 1px solid #E7E7E7;
+  background: var(--Gray-04, #FCFCFC);
 }
-
