--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,6 +4,37 @@
   align-self: stretch;
   padding: 0.5rem;
 }
+@media (max-width:700px) {
+  .left-l-d {
+    display: none;
+  }
+  .flex-column-mobile {
+    flex-direction: column !important;
+  }
+  .flex-column-mobile .w-100-m  {
+    width: 100% !important;
+  }
+  .mobile-flex {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .edit-remove{
+    left: 20%;
+  }
+  .cover-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+  .cover-image {
+    width: 100% !important;
+    aspect-ratio: 16/13;
+    height: auto !important;
+  }
+  .mobile-padding-none{
+    padding: 0px !important;
+  }
+}
 
 .right-l-d {
   width: 100%;
@@ -630,6 +661,7 @@ text-decoration-line: underline;
   box-shadow: 0px 20px 70px 0px rgba(194, 194, 194, 0.10);
 }
 
+
 .plus-button {
   display: flex;
   padding: .5rem 1rem;
@@ -638,4 +670,131 @@ text-decoration-line: underline;
   border-radius: 16px;
   border: 1px solid #E7E7E7;
   background: var(--Gray-04, #FCFCFC);
+}
+
+
+/* bookings */
+
+.date-box {
+  display: flex;
+  width: 128px;
+  min-width: 128px;
+  height: 128px;
+  min-height: 128px;
+  padding: 8px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-top: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-right: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-bottom: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  border-left: 0.5px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: #FFF;
+}
+
+.date-box-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.date-box-active {
+  border-top: 1px solid var(--Primary-Primary-50, #0D99FF);
+  border-right: 0.5px solid var(--Primary-Primary-50, #0D99FF);
+  border-bottom: 1px solid var(--Primary-Primary-50, #0D99FF);
+  border-left: 1px solid var(--Primary-Primary-50, #0D99FF);
+  background: #FFF;
+}
+
+.scroll-body-calander::-webkit-scrollbar {
+  display: none !important;
+}
+
+.coll {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  min-width: fit-content;
+}
+
+.activeblu {
+  color: #0D99FF;
+  background-color: #F3FAFE;
+  border: 1px solid #F3FAFE;
+}
+
+.dashboard-items {
+  display: block;
+  margin-bottom: 3rem;
+}
+
+.dashboard-item {
+  width: 293px;
+  border-radius: 10px;
+  border: 1px solid var(--Grayscale-Gray-24, rgba(234, 235, 237, 0.80));
+  background: var(--White-White-100, #FFF);
+}
+
+.dashboard-item p {
+  line-height: 21px !important;
+}
+
+.dashboard-item hr {
+  border: 1px solid rgba(214, 215, 216, 0.8);
+  margin: 0 !important;
+}
+
+.dashboard-item-top {
+  padding: 24px;
+  width: 100%;
+}
+
+.dashboard-item-bottom {
+  display: flex;
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  color: var(--GREY, #747474);
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 21px;
+  /* 175% */
+  letter-spacing: -0.32px;
+}
+
+.dot {
+  display: block !important;
+  color: #acacb0;
+  fill: var(--Grayscale-Gray-60, #ACACB0);
+}
+.max-w {
+  max-width: 1550px;
+}
+.overflow::-webkit-scrollbar {
+  display: none !important;
+  }
+
+@media (max-width:700px) {
+  #profile-mobile-version {
+    display: block !important;
+  }
+
+  .profile-desktop-version {
+    display: none !important;
+  }
+  .overflow {
+    margin-right: 0px !important;
+    padding-right: 0px !important;
+  } 
+  .mobile-margin-r-none{
+    padding: 0 !important;
+  }
+  .dashboard-item{
+    width: 100% !important;
+  }
 }
