--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1165,8 +1165,8 @@ fonts
 }
 
 .rating {
-  font-size: 15px;
-  font-weight: 700;
+  font-size: 15px !important;
+  font-weight: 700 !important;
   line-height: 20px;
   letter-spacing: -0.5px;
   text-align: left;
