--- a/css/s-custom2.css
+++ b/css/s-custom2.css
@@ -344,10 +344,22 @@ img {
 .book-gallery .bb {
   color: #747474 !important;
   text-decoration: line-through;
+font-size: 16px;
+font-weight: 700;
+text-decoration-line: strikethrough;
 }
 
 .book-gallery .b {
-  color: #333 !important;
+color: #333 !important;
+font-size: 16px;
+font-weight: 700;
+}
+
+.book-gallery p span {
+color: #A6A6A6;
+font-size: 14px;
+font-weight: 400;
+letter-spacing: -0.2px;
 }
 
 
