loader included in css

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ a.btn-brand:hover {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   background: #1E1E20;
   color: #fff;
+  cursor:pointer;
 }
 
 .btn.btn-cd-secondary {
@@ -1547,3 +1548,35 @@ main {
       margin: auto;
     }
   }
+
+#preloader {
+    position: fixed;
+    inset: 0;
+    z-index: 999999;
+    overflow: hidden;
+    background: #ffffff;
+    transition: all 0.6s ease-out;
+}
+
+    #preloader:before {
+        content: "";
+        position: fixed;
+        top: calc(50% - 30px);
+        left: calc(50% - 30px);
+        border: 6px solid #ffffff;
+        border-color: #0D99FF transparent #0D99FF transparent;
+        border-radius: 50%;
+        width: 60px;
+        height: 60px;
+        animation: animate-preloader 1.5s linear infinite;
+    }
+
+@keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
