--- a/css/popups.css
+++ b/css/popups.css
@@ -90,14 +90,15 @@ letter-spacing: -0.408px;
   position: relative;
   padding: 1rem 0;
 }
-.left-map {
+.left-Map {
   height: 100%;
   width: 60%;
-  transition: width 1s ease-in-out;
+  transition: all 1s ease-in-out;
   overflow: hidden;
+  margin-left: 1rem;
 }
-.Right-map {
-  height: 70vh;
+.Right-Map {
+  height: calc(100vh - 110px);
   width: 40%;
   transition: width 1s ease-in-out;
   position: sticky;
@@ -109,25 +110,27 @@ letter-spacing: -0.408px;
   position: relative;
 }
 
-.left-map .listing-map {
+.left-Map .listing-map {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-  justify-content: stretch;
+  justify-content: start;
+  background: white;
 }
-.left-map .listing-item {
+.left-Map .listing-item {
 display: flex;
 width: 304px;
+max-width: 365px;
 padding-bottom: 16px;
 flex-direction: column;
 align-items: flex-start;
 gap: 16px;
 flex-shrink: 0;
+flex-grow: 1;
 border-radius: 13px;
 border: 0px solid var(--Grayscale-Gray-40, rgba(172, 172, 176, 0.24));
 background: var(--Shades-White, #FFF);
 }
-
 
 .map-container .button-div {
   width: fit-content;
@@ -138,54 +141,67 @@ background: var(--Shades-White, #FFF);
   top: 1rem;
   left: 1rem;
   z-index: 1;
-  transition: all 1s ease-in-out;
 }
 
 .map-container .button-div button {
   min-width: max-content;
-  width: 50px;
-  height: 50px;
   border: 1px solid rgba(172, 172, 176, 0.24);
   background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.decreade-Map .left-map {
+.map-container .button-div button img {
+   width: 20px;
+   height: 20px;
+}
+.decreade-Map {
+  gap: 0;
+}
+.increase-Map {
+  gap: 0;
+}
+.decreade-Map .left-Map {
   width: 0px !important;
   height: 0px;
 }
-.decreade-Map .Right-map {
+.decreade-Map .Right-Map {
   width: 100% !important;
+  margin: 5rem 0;
 }
-.increase-Map .Right-map {
+.increase-Map .Right-Map {
   width: 0px !important;
 }
-.increase-Map .left-map {
+.increase-Map .left-Map {
   width: 100% !important;
 }
 
-.decreade-Map .Right-map .button-div{
-  top: -3rem !important;
-  left: 0rem !important;
-}
-.decreade-Map .Right-map .button-div button{
-
-}
-.increase-Map .Right-map .button-div{
-  top: -3rem !important;
+.increase-Map .Right-Map .button-div{
+  top: 3rem !important;
   left: -7rem !important;
 }
-.increase-Map .Right-map .button-div button{
- 
-}
-
-
 .decreade-Map .left-map {
   width: 0px !important;
-  transition: all 1s ease-in-out;
+
 }
 
 .increase-Map .Right-map{
   width: 0px !important;
+}
+
+.left-Map .filter-menu-main {
   transition: all 1s ease-in-out;
+}
+
+.decreade-Map .left-Map .filter-menu-main {
+  position: fixed;
+  top: 0;
+  margin-top: 6rem !important;
+  transition: none;
+  z-index: -1;
+}
+
+@media (max-width:700px){
 }
 
 
@@ -197,12 +213,7 @@ background: var(--Shades-White, #FFF);
 /*
 * Optional: Makes the sample page fill the window.
 */
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+
 .price-tag {
 background-color: #FFFFFF;
 border-radius: 8px;
