--- a/css/popups.css
+++ b/css/popups.css
@@ -1,7 +1,6 @@
 /* -----------------------------
  Filter Model Poupup
 ------------------------------*/
-
 .type-list {
   display: flex;
   list-style: none;
@@ -52,11 +51,12 @@ gap: 11.399px;
 border-radius: 16px;
 background: var(--PRIMARY-MAIN, #0D99FF);
 color: #FFFFFF;
+border: none;
 }
 
 .results-text {
 color: var(--Grayscale-Gray-80, #4B4B4D);
-font-size: 13px;
+font-size: 13px !important;
 font-weight: 400;
 line-height: 18px; /* 138.462% */
 letter-spacing: -0.078px;
@@ -74,6 +74,79 @@ line-height: 22px;
 letter-spacing: -0.408px;
 }
 
+/* input range between */
+.slider-container {
+  position: relative;
+  width: 300px;
+  height: 30px;
+  margin: 20px auto;
+}
+
+.slider-container input[type="range"] {
+  position: absolute;
+  width: 100%;
+  height: 8px;
+  background: transparent;
+  pointer-events: none; /* Hide the slider tracks */
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.slider-container input[type="range"]::-webkit-slider-runnable-track {
+  background: transparent;
+}
+
+.slider-container input[type="range"]::-moz-range-track {
+  background: red;
+}
+
+.slider-container input[type="range"]::-ms-track {
+  background: #747474;
+  border: none;
+}
+
+.slider-container input[type="range"]::-webkit-slider-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.slider-container input[type="range"]::-moz-range-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
+
+.slider-container input[type="range"]::-ms-thumb {
+  pointer-events: all;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
+
+.range-bar {
+  position: absolute;
+  top: 10px;
+  height: 8px;
+  background: #007bff;
+  z-index: 0;
+  pointer-events: none;
+}
+
+.output {
+  text-align: center;
+  font-size: 18px;
+}
 /* -----------------------------
  Filter Model Poupup ends
 ------------------------------*/
